// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabPanel renders correctly with className 1`] = `
<div
  className="tab-panels--wrapper"
  id=""
>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel active animation-direction-rtl test"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    First
  </div>
</div>
`;

exports[`TabPanel renders correctly with empty props 1`] = `
<div
  className="tab-panels--wrapper"
  id=""
>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel active animation-direction-rtl"
    data-testid="tab-panel"
    id=""
    role="tabpanel"
  >
    First
  </div>
</div>
`;

exports[`TabPanel renders correctly with id 1`] = `
<div
  className="tab-panels--wrapper"
  id=""
>
  <div
    className="tabPanelWrapper tab-panel--wrapper tab-panel active animation-direction-rtl"
    data-testid="tab-panel"
    id="test"
    role="tabpanel"
  >
    First
  </div>
</div>
`;
